add nostr import / export to GUI
